@@ -1,4 +1,3 @@
 #!/bin/sh
 
-echo "Trigger $2"
-echo $2|sendmail $1
+echo "Trigger $1"
